CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (yam)

# check the environment
IF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
    SET (YENV_SYSTEM_IS_LINUX "Linux")
ELSEIF ("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
    SET (YENV_SYSTEM_IS_WINDOWS "Windows")
ELSE ()
    MESSAGE (FATAL_ERROR "Sorry, can't find the operator system type - CMAKE_SYSTEM_NAME:${CMAKE_SYSTEM_NAME} or not support your operator system")
ENDIF ()

IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET (YENV_COMPILER_IS_GNUC "GNUC")
ELSEIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    SET (YENV_COMPILER_IS_MSVC "MSVC")
ELSE ()
    MESSAGE (FATAL_ERROR "Sorry, can't find the compiler type - CMAKE_CXX_COMPILER_ID:${CMAKE_CXX_COMPILER_ID} or not support your compiler")
ENDIF ()

IF (YENV_SYSTEM_IS_LINUX)
    IF (YENV_COMPILER_IS_GNUC)
        SET (CMAKE_C_FLAGS "-DOS_LINUX ${CMAKE_C_FLAGS}")
        SET (CMAKE_CXX_FLAGS "-DOS_LINUX ${CMAKE_CXX_FLAGS}")
    ELSEIF (YENV_COMPILER_IS_MSVC)
        SET (CMAKE_C_FLAGS "/DOS_LINUX ${CMAKE_C_FLAGS}")
        SET (CMAKE_CXX_FLAGS "/DOS_LINUX ${CMAKE_CXX_FLAGS}")
    ENDIF ()
ELSEIF (YENV_SYSTEM_IS_WINDOWS)
    IF (YENV_COMPILER_IS_GNUC)
        SET (CMAKE_C_FLAGS "-DOS_WINDOWS ${CMAKE_C_FLAGS}")
        SET (CMAKE_CXX_FLAGS "-DOS_WINDOWS ${CMAKE_CXX_FLAGS}")
    ELSEIF (YENV_COMPILER_IS_MSVC)
        SET (CMAKE_C_FLAGS "/DOS_WINDOWS ${CMAKE_C_FLAGS}")
        SET (CMAKE_CXX_FLAGS "/DOS_WINDOWS ${CMAKE_CXX_FLAGS}")
    ENDIF ()
ENDIF ()

IF (YENV_COMPILER_IS_GNUC)
    SET (CMAKE_C_FLAGS "-DGNUC ${CMAKE_C_FLAGS}")
    SET (CMAKE_CXX_FLAGS "-DGNUC ${CMAKE_CXX_FLAGS}")
ELSEIF (YENV_COMPILER_IS_MSVC)
    SET (CMAKE_C_FLAGS "/DMSVC ${CMAKE_C_FLAGS}")
    SET (CMAKE_CXX_FLAGS "/DMSVC ${CMAKE_CXX_FLAGS}")
ENDIF ()

SET (ROOT_PATH "${yam_SOURCE_DIR}/..")
SET (CODE_PATH "${ROOT_PATH}/code")
SET (OUT_PATH "${ROOT_PATH}/out")

SET (QT_SDK_PATH "${QT_SDK_PATH}" CACHE STRING "Add the Qt SDK path" FORCE)
IF (YENV_SYSTEM_IS_LINUX)
    SET (QT_SDK_INC_PATH ${QT_SDK_PATH}/include/qt5)
ELSE ()
    SET (QT_SDK_INC_PATH ${QT_SDK_PATH}/include)
ENDIF ()

# can't compile the photoshop plugin for gnuc
IF (YENV_COMPILER_IS_MSVC)
    SET (PHOTOSHOP_SDK_PATH "${PHOTOSHOP_SDK_PATH}" CACHE STRING "Add the Photoshop SDK path" FORCE)
ELSE ()
    MESSAGE ("It will not build the photoshop plugin in non-msvc")
ENDIF ()

ADD_SUBDIRECTORY (yam)

ADD_SUBDIRECTORY (yeditor)

# can't compile the photoshop plugin for gnuc
IF (YENV_COMPILER_IS_MSVC)
    ADD_SUBDIRECTORY (pstoyam)
ENDIF ()

ADD_SUBDIRECTORY (t3rd)

ADD_SUBDIRECTORY (test)
